[BUG] First pass at fixing the Font issue...
The site uses Open Sans by default, but it was never being loaded. So,
in reality, each browser was falling back to a system font, which
displays differently everywhere, causing layout bugs.  I now load
Open Sans, though we only use it in one bug-prone header spot.

In the future we'll be moving fully to Open Sans, but need to check
each location for layout breaks when doing so.

--- a/app/assets/stylesheets/base/_vars.scss
+++ b/app/assets/stylesheets/base/_vars.scss
@@ -22,7 +22,8 @@ $notice-font-color: #444;
 $notice-border-color: #9DBC89;
 $notice-color: #E3ECDC;
 
-$font-primary: "Open Sans", sans-serif;
+// $font-primary: "Open Sans", sans-serif;
+$font-primary: sans-serif;
 $font-secondary: "Roboto", sans-serif;
 
 $mobile: new-breakpoint(max-width 500px 12);
